update di review
