# api/swagger.yaml
@@ -10,7 +10,7 @@ info:
   license:
     name: "Apache-2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "mdgbookstore.herokuapp.com"
+host: "localhost:5000"
 basePath: "/v2"
 tags:
 - name: "book"
@@ -925,56 +925,6 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/Review"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Review not found"
-      x-swagger-router-controller: "Review"
-  /review/{id}/book:
-    get:
-      tags:
-      - "review"
-      summary: "Retrieve the book a review was written for"
-      operationId: "getBookByReview"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "id"
-        in: "path"
-        description: "ID of review of which to retrieve the book"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Book"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Review not found"
-      x-swagger-router-controller: "Review"
-  /review/{id}/user:
-    get:
-      tags:
-      - "review"
-      summary: "Retrieve the user a review was written by"
-      operationId: "getUserByReview"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "id"
-        in: "path"
-        description: "ID of review of which to retrieve the user who wrote it"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/User"
         400:
           description: "Invalid ID supplied"
         404:
